_rendered/apps/cnpg-plugin-barman-cloud/apps-deployment-cloudnative-pg-cnpg-plugin-barman-cloud.yaml
# Source: cnpg-plugin-barman-cloud/charts/plugin-barman-cloud/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: plugin-barman-cloud-0.7.1
    app.kubernetes.io/name: plugin-barman-cloud
    app.kubernetes.io/instance: cnpg-plugin-barman-cloud
    app.kubernetes.io/version: "v0.14.0"
    app.kubernetes.io/managed-by: Helm
  name: cnpg-plugin-barman-cloud
  namespace: cloudnative-pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plugin-barman-cloud
      app.kubernetes.io/instance: cnpg-plugin-barman-cloud
  # RollingUpdate strategy is not supported by the operator yet, so it can only use the Recreate strategy.
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plugin-barman-cloud
        app.kubernetes.io/instance: cnpg-plugin-barman-cloud
    spec:
      containers:
      - args:
        - operator
        - --server-cert=/server/tls.crt
        - --server-key=/server/tls.key
        - --client-cert=/client/tls.crt
        - --server-address=:9090
        - --leader-elect
        - --log-level=debug
        image: "ghcr.io/cloudnative-pg/plugin-barman-cloud:v0.14.0"
        name: barman-cloud
        ports:
        - containerPort: 9090
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 8081
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 8081
        resources:
          {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 10001
          runAsUser: 10001
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /server
          name: server
        - mountPath: /client
          name: client
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: cnpg-plugin-barman-cloud
      volumes:
      - name: server
        secret:
          secretName: barman-cloud-server-tls
      - name: client
        secret:
          secretName: barman-cloud-client-tls
