_rendered/apps/cnpg-plugin-barman-cloud/service-cloudnative-pg-barman-cloud.yaml
# Source: cnpg-plugin-barman-cloud/charts/plugin-barman-cloud/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: plugin-barman-cloud-0.7.1
    app.kubernetes.io/name: plugin-barman-cloud
    app.kubernetes.io/instance: cnpg-plugin-barman-cloud
    app.kubernetes.io/version: "v0.14.0"
    app.kubernetes.io/managed-by: Helm
    cnpg.io/pluginName: barman-cloud.cloudnative-pg.io
  annotations:
    cnpg.io/pluginClientSecret: barman-cloud-client-tls
    cnpg.io/pluginPort: "9090"
    cnpg.io/pluginServerSecret: barman-cloud-server-tls
  name: barman-cloud
  namespace: cloudnative-pg
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/name: plugin-barman-cloud
    app.kubernetes.io/instance: cnpg-plugin-barman-cloud
